Migrating updateEmployee to use a request object not a JPA object
